--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 			<artifactId>bajo-nemoo</artifactId>
 			<version>${bajo.version}</version>
 		</dependency>
-		
+
 		<!-- ICP Requires v5.2.2; fail if use v5.1.2 -->
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
 		<dependency>
@@ -45,6 +45,12 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents.core5</groupId>
 			<artifactId>httpcore5</artifactId>
+			<version>5.2.3</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.core5/httpcore5-h2 -->
+		<dependency>
+			<groupId>org.apache.httpcomponents.core5</groupId>
+			<artifactId>httpcore5-h2</artifactId>
 			<version>5.2.3</version>
 		</dependency>
 
